fixed countdown size in mobile
the countdown size was a little too big for mobile. should be all set now

--- a/styles/main.css
+++ b/styles/main.css
@@ -143,6 +143,9 @@ footer p {
         font-size: .9rem;
         padding: 0 1rem;
     }
+    .the-countdown {
+        font-size: 3rem;
+    }
     .history li {
         padding: 0 .5em;
         font-size: 1.15rem;
